--- a/css/styleJs.css
+++ b/css/styleJs.css
@@ -1,10 +1,5 @@
 html,
 body {
-		background-image: url(../img/backgrounds/brick.jpg);
-		background-repeat: repeat-y;
-		background-color: #ffc1d8;
-		background-size: 100%;
-		background-attachment: fixed;
 		user-select: none;
 }
 
@@ -385,7 +380,7 @@ blockquote p{
 .shop p{
 	font-size: 2vmax;
 	font-weight: bold;
-	color: #6B8E23;
+	color: black;
 	text-align: center;
 	padding: 0 0;
 	margin: 1.5vmax 1vmax;
@@ -463,7 +458,7 @@ blockquote p{
 #settingsMenu{
 	position: absolute;
 	width: 30vmax;
-	height: 50vmin;
+	height: 55vmin;
 	border: 2px solid white;
 	border-radius: 0.55vw;
 	background-color: rgba(111, 211, 151, 0.8);
@@ -513,9 +508,9 @@ blockquote p{
 	text-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
 }
 
-#damageText{
+#clickDamageText, #autoDamageText{
 	position: absolute;
-	font-size: 3vmax;
+	font-size: 4vmax;
 	text-shadow: 2px 2px 6px black;
 }
 
