--- a/css/styleJs.css
+++ b/css/styleJs.css
@@ -8,7 +8,7 @@ header {
 		left: 0px;
 		top: 0px;
 		position: fixed;
-		background-color: rgba(255, 192, 203, 1);
+		background-color: /*rgba(255, 192, 203, 1)*/ black;
 		border-radius: 0.2vw;
 		height: 4.5vmax;
 		width: 99%;
@@ -407,7 +407,7 @@ blockquote p{
 	width: 69%;
 	float: right;
 	clear: right;
-	color: #FFFF33;
+	color: rgba(135, 206, 235, 1);
 	text-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
 	margin-top: 0.5vh;
 	font-size: 3vmax;
