--- a/css/styleJs.css
+++ b/css/styleJs.css
@@ -540,7 +540,7 @@ blockquote p{
 	left: 34vw;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
 	main{
 		position: relative;
 		margin-top: 5vmax;
